<resources>
    <string name="app_name">Brilla México</string>
    <string name="title_activity_main">Brilla México</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_void">...</string>
    <string name="hostname">http://api.brillamexico.org</string>
    <string name="facebook_app_id">605895716209070</string>
    <string name="fb_avatar_link">https://graph.facebook.com/__fbid__/picture?type=large</string>
    <string name="fb_avatarmini_link">https://graph.facebook.com/__fbid__/picture</string>
    <string name="drawer_txt_myprofile">Mi Perfil</string>
    <string name="drawer_txt_activity">Actividad</string>
    <string name="drawer_txt_new">Noticias</string>
    <string name="drawer_txt_tuto">Tutorial</string>
    <string name="drawer_txt_privacy">Aviso de Privacidad</string>
    <string name="drawer_txt_credits">Sobre los Desarrolladores</string>
    <string name="dwOpen">Abierto</string>
    <string name="dwClose">Cerrado</string>
    <string name="title_activity_login_step1">LoginStep1</string>
    <string name="title_activity_login_step2">LoginStep2</string>
    <string name="title_activity_login_step3">LoginStep3</string>
    <string name="title_activity_login_step4">LoginStep4</string>
    <string name="title_activity_login_step5">LoginStep5</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="fb_txt_login">Registro con facebook</string>
    <string name="l_text_1">Pequeños retos generan GRANDES cambios</string>
    <string name="l_text_3">¡COMPROMÉTETE CON LAS FUTURAS GENERACIONES!</string>
    <string name="l_text_4">¿QUÉ ERES?</string>
    <string name="l_text_5">Jóven - Adulto</string>
    <string name="l_text_6">Emprendedor</string>
    <string name="l_text_7">Empresa</string>
    <string name="l_text_12">¿HOMBRE O MUJER?</string>
    <string name="l_text_8">¡Hola </string>
    <string name="l_text_9"> !</string>
    <string name="l_text_10">Escribe tu nombre</string>
    <string name="l_text_11">
    <![CDATA[
    Hola <font color="#7d00a8">__username__</font>, nos gustaría saber un poco más de ti, conecta tu cuenta de <font color="#2f77d8">facebook</font> para participar.
    ]]>
    </string>
    <string name="l_text_logro">
    <![CDATA[
    Has conseguido el logro <font color="#7d00a8">__logroname__</font>.
    ]]>
    </string>
    <string name="title_activity_user_profile">Mi Perfil</string>
    <string name="p_samplename">Sample Name</string>
    <string name="p_samplebio">...</string>
    <string name="p_label_fotos">Fotos</string>
    <string name="p_label_puntos">Puntos</string>
    <string name="p_label_logros">Logros</string>
    <string name="title_activity_share">Publica tu #selfie</string>
    <string name="vp_piedefoto">Pie de Foto</string>
    <string name="vp_hint">Hice un compromiso #MiSelfieBrilla</string>
    <string name="vp_share">COMPARTIR</string>
    <string name="title_activity_foto">Toma tu #Selfie</string>
    <string name="title_activity_compromisos">Nueva #selfie</string>
    <string name="c_cualestuyo">¿Cuál es tu compromiso?</string>
    <string name="c_mecomprometo">ME COMPROMETO A</string>
    <string name="c_youngadults">JÓVENES Y ADULTOS</string>
    <string name="c_entrepeneur">EMPRENDEDORES</string>
    <string name="c_enterprise">EMPRESARIOS</string>
    <string-array name="campo1">
        <item>Preservar el medio ambiente a través del uso eficiente de la energía y así haré brillar a México.</item>
        <item>Consumir energía sin desperdiciarla y así haré brillar a México.</item>
        <item>Usar más transporte público para reducir mi huella ecológica y así haré brillar a México.</item>
        <item>Desconectar los aparatos eléctricos y apagar las luces cuando no los esté utilizando y así haré brillar a México.</item>
        <item>Usar focos ahorradores y así haré brillar a México.</item>
        <item>Usar la bicicleta para viajes cortos y así haré brillar a México.</item>
        <item>Lavar en la lavadora con carga completa y así haré brillar a México.</item>
        <item>Fomentar en mi familia el uso eficiente de energía y así haré brillar a México.</item>
        <item>Usar la escalera cuando sea posible, evitando el uso innecesario del ascensor; y así haré brillar a México.</item>
        <item>Apagar las luces y computadoras de mi trabajo cuando no las esté utilizando y así haré brillar a México.</item>
        <item>Comprar alimentos locales y de temporada y así haré brillar a México.</item>
        <item>Aprovechar la luz natural del día y así haré brillar a México.</item>
        <item>Usar aparatos electrónicos que tengan la etiqueta de eficiencia energética y así haré brillar a México.</item>
        <item>Cerrar las puertas y ventanas para optimizar el uso del aire acondicionado y así haré brillar a México.</item>
    </string-array>
    <string-array name="campo2">
        <item>Usar de manera eficiente la energía dentro de mi empresa y en mi casa y así haré brillar a México.</item>
        <item>Abrir una empresa que genere fuentes de energía verde y así haré brillar a México.</item>
        <item>Abrir una empresa que haga uso de energías renovables y así haré brillar a México.</item>
        <item>Impulsar proyectos que promuevan la generación de nuevas fuentes de energía y así haré brillar a México.</item>
    </string-array>
    <string-array name="campo3">
        <item>Que mi empresa utilice energía verde en sus procesos y así haré brillar a México.</item>
        <item>Que mi empresa sea más eficiente en sus procesos productivos mediante el uso de energías limpias y así haré brillar a México.</item>
        <item>Capacitarme, así como a mi personal, en el uso y la importancia de las nuevas energías y así haré brillar a México.</item>
        <item>Trabajar con proveedores que hagan uso de procesos eficientes de energía y así haré brillar a México.</item>
        <item>Implementar energías renovables dentro de mi empresa y así haré brillar a México.</item>
        <item>Usar materiales reciclables dentro de la empresa y así haré brillar a México.</item>
        <item>Brindar capacitación para el uso eficiente de energía y la importancia de la energía verde, y así haré brillar a México.</item>
        <item>Apagar los focos y desconectar los aparatos electrónicos en áreas de trabajo que no se estén utilizando y así haré brillar a México.</item>
        <item>Impulsar proyectos que promuevan el uso eficiente de energía y así haré brillar a México.</item>
    </string-array>
    <string name="title_activity_leader_board">Actividad</string>
    <string name="a_ht_brillamx">#BrillaMexico</string>
    <string name="a_ht_miselfie">#MiSelfieBrilla</string>
    <string name="a_leaderboard">LeaderBoard</string>
    <string name="a_sampleuser">
    <![CDATA[
        \@SammyPerez
    ]]>
    </string>
    <string name="a_loremipsum">This is Photoshop\'s version  of Lorem Ipsum. #BrillaMexico nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis</string>
    <string name="title_activity_selfie">#Selfie</string>
    <string name="title_activity_noticias">Noticias</string>
    <string name="title_activity_noticia_self">Noticias</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_user_viewer">Perfil de</string>
    <string name="title_activity_emprendedores">Emprendedores</string>
    <string name="title_activity_emp1">Emprendedores</string>
    <string name="desc_emp_1_1">Jahir Mojica de 28 años es Ingeniero Industrial por la UNAM y actualmente se encuentra cursando una Maestría en Alta Dirección.</string>
    <string name="desc_emp_1_2">Fundador y CEO de Sustentabilidad en Energía y Medio Ambiente S.A. de C.V. (SUEMA), empresa creada para dar una solución a la problemática ambiental y combatir el cambio climático.</string>
    <string name="desc_emp_1_3">Se dedica al diseño de sistemas híbridos de bioconversión de residuos en energía, además de ofrecer consultorías para mejorar sistemas existentes y todo tipo de equipos para manejo de desechos urbanos.</string>
    <string name="desc_emp_2_1">Abraham Chetewy, Licenciado en Administración de Empresas es Socio Fundador y actual Director General de Somerset Technologies S.A. de C.V..</string>
    <string name="desc_emp_2_2">Tiene especial interés en el área de energía y medio ambiente, así como en el desarrollo de tecnologías renovables.</string>
    <string name="desc_emp_2_3">Ha realizado diversos proyectos relacionados con la eficiencia energética y actualmente contribuye al desarrollo de soluciones de alta ingeniería e innovación tecnológica en la industria de las turbinas eólicas.</string>
    <string name="desc_emp_3_1">El Ingeniero Francisco X. Villaseñor se ha dedicado al estudio e investigación de biocombustibles y biomasas en la última década. Es Fundador y Presidente del consejo de administración de las empresas Carbon Diversion América Latina S.A. de C.V.</string>
    <string name="desc_emp_3_2">Estudió Ingeniería Civil en la Universidad Autónoma de Guadalajara y actualmente, continua sus estudios cursando la Maestría en Energía Renovable en la misma institución.</string>
    <string name="desc_emp_3_3">A la fecha ha desarrollado 4 patentes y solicitado su registro en el IMPI, todas ellas relacionadas con la transformación de materia orgánica en energía renovable.</string>
    <string name="title_activity_emp2">Emprendedores</string>
    <string name="title_activity_emp3">Emprendedores</string>
    <string name="title_activity_actividad">Actividad</string>
    <string name="title_activity_erase_acount">Salir</string>
    <string name="title_activity_bases">Bases del Concurso</string>
    <string name="title_activity_privacy">Aviso de Privacidad</string>
    <string name="embed_youtube">https://www.youtube.com/embed/</string>
    <string name="videoid_concurso">t1UPLPS419E</string>
    <string name="videoid_jahir">Ie6fX3USUbg</string>
    <string name="videoid_abraham">WlEBo2YOq8U</string>
    <string name="videoid_francisco">HuT23pQG8gE</string>
    <string name="title_activity_tweets">Tweets</string>
    <string name="title_activity_top_users">TopUsers</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_preselfie">Preselfie</string>
    <string name="title_activity_edit_user_info">Editar Perfil</string>
    <string name="title_activity_logro">Nuevo Logro</string>
    <string-array name="tabs_actividad">
        <item>LeaderBoard</item>
        <item>10 Mejores</item>
        <item>#Selfies</item>
    </string-array>
    <string name="title_activity_selfies">#Selfies</string>
    <string name="title_activity_alternative_camera">AlternativeCamera</string>
    <string name="title_activity_video_bmx">VideoBMX</string>
    <string name="title_activity_login_test">LoginTest</string>
</resources>