<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ambmultimedia.brillamexico.LoginStep2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/g_bg">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_text_4"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/bmx_purple"
                    android:textSize="22sp"
                    android:padding="24dp"
                    android:layout_marginTop="16dp" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icono_jovenesadultos"
                    android:layout_marginTop="16dp"
                    android:id="@+id/imYoungAdult"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_text_5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_text_gray"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColorHighlight="@color/c_text_oxford" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icono_emprendedores"
                    android:layout_marginTop="24dp"
                    android:id="@+id/imEntrepreneur"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_text_6"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_text_gray"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icono_empresas"
                    android:layout_marginTop="24dp"
                    android:id="@+id/imEnterprise"
                    android:focusableInTouchMode="false"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_text_7"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_text_gray"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>