<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/c_back_enable"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_cualestuyo"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/g_white" />

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/iconAccion"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_1_11"
            android:background="@color/g_trans"
            android:layout_margin="16dp"
            android:contentDescription="@string/c_1_11"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_mecomprometo"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/c_btn_enable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_1_11"
            android:id="@+id/textAccion"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/g_white"
            android:textSize="16sp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="24dp"
            android:gravity="center" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            fab:fab_icon="@drawable/ic_camera"
            fab:fab_colorNormal="@color/c_btn_enable"
            fab:fab_colorPressed="@color/c_btn_enable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_youngadults"
            android:id="@+id/campoAccion"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/g_white"
            android:textSize="26sp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</LinearLayout>