<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mx.ambmultimedia.brillamexico.MainActivity">

        <include android:id="@+id/app_bar" layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_below="@+id/app_bar">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:adjustViewBounds="true"
                        android:id="@+id/imageSelfie"
                        android:background="@color/g_black"
                        android:scaleType="fitCenter" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:adjustViewBounds="true"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageMarco"
                        android:src="@drawable/marcos"
                        android:background="@color/g_trans"
                        android:scaleType="fitCenter" />

                    </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vp_piedefoto"
                    android:textColor="@color/bmx_magenta"
                    android:id="@+id/textView1"
                    android:layout_marginBottom="4dp"
                    android:textSize="20sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:id="@+id/editText"
                    android:textColor="@color/c_text_oxford"
                    android:textColorHint="@color/c_text_gray"
                    android:hint="@string/vp_hint"
                    android:backgroundTint="@color/c_text_gray"
                    android:gravity="top" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bmx_pistache"
                    android:textColor="@color/g_white"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/vp_share"
                    android:id="@+id/button" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>